syntax = "proto3";
import "common/card.proto";
import "common/block.proto";
import "common/report.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CardsReadMicroservice";

package CardsMicroservice;

service CardsRead {
  rpc Get (GetCardsRequest) returns (GetCardsResponse);
  rpc GetByAccounts (GetCardsRequest) returns (GetCardsResponse);
  rpc GetBlocks (GetBlocksRequest) returns (GetBlocksResponse);
  rpc AggregateUserActivity (AggregateUserActivityRequest) returns (AggregateUserActivityResponse);
  rpc AggregateOverall (AggregateOverallRequest) returns (AggregateOverallResponse);
}

message GetCardsRequest {
  repeated string ids = 1;
}

message GetCardsResponse {
  repeated Card cards = 1;
}

message GetBlocksRequest {
  string cardId = 1;
}

message GetBlocksResponse {
  repeated Block blocks = 1;
}

message AggregateUserActivityRequest {
  repeated string accountsIds = 1;
  google.protobuf.Timestamp timestampFrom = 2;
  google.protobuf.Timestamp timestampTo = 3;
  Granularity granularity = 4;
}